feat(back): add my-products endpoint with reservations, reservateur info in serializer and update OpenAPI spec
